# sispca

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  requirements.txt
docs/source/tutorials/: index.rst  tutorial_brca.ipynb  tutorial_donut.ipynb  tutorial_scrna_pca.ipynb  tutorial_scrna_vae.ipynb
sispca/: __init__.py  data.py  hcv_vi.py  model.py  utils.py
tests/: test_data.py  test_model.py  test_utils.py
